--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-server.port=8090
+#server.port=8090
+spring.datasource.url=jdbc:postgresql://localhost:5432/comex
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
